--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,7 +17,7 @@ jobs:
         run: docker build -t my-django-app .
 
       - name: Log in to Docker Hub
-        run: echo ${{ secrets.jfit8X@SC)P+hk$ }} | docker login -u ${{ secrets.aurits }} --password-stdin
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Push Docker image
         run: docker push aurits/my-django-app
