--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
 
     runs-on: ubuntu-latest
@@ -15,9 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build ./docker --file ./docker/Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Recess_Project_Template/src/our_app/Dockerfile --tag my-image-name:$(date +%s)
     - name: Log in to Docker Hub
       run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
     - name: Push Docker image to Docker Hub
       run: docker push my-image-name:$(date +%s)
-
