--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,6 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Recess_Project_Template/src/our_app/Dockerfile --tag my-image-name:$(date +%s)
     - name: Log in to Docker Hub
-      run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
     - name: Push Docker image to Docker Hub
       run: docker push my-image-name:$(date +%s)
