--- a/Recess_Project_Template/src/our_app/Dockerfile
+++ b/Recess_Project_Template/src/our_app/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /app
 COPY . /app
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --trusted-host pypi.python.org -r requirements.txt
+RUN pip install -r requirements.txt
 
 # Expose port 80 to the outside world
 EXPOSE 80
