--- a/Recess_Project_Template/src/our_app/Dockerfile
+++ b/Recess_Project_Template/src/our_app/Dockerfile
@@ -10,11 +10,13 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY . /app
 
+COPY requirements.txt /app
+
 # Install any needed packages specified in requirements.txt
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 
 # Expose port 80 to the outside world
 EXPOSE 80
 
 # Run the application
-CMD ["python", "manage.py", "runserver", "0.0.0.0:80"]
+CMD ["python3", "manage.py", "runserver", "0.0.0.0:80"]
